Adds Orders microservice that uses RabbitMQ
