# product-api/swagger.yaml
@@ -12,10 +12,10 @@ definitions:
         type: object
         x-go-package: github.com/notoriouscode97/go-microservices/product-api/sdk/models
     Product:
-        description: Product defines the structure for an API product
+        description: Product Product defines the structure for an API product
         properties:
             description:
-                description: the description for this product
+                description: the description for this poduct
                 maxLength: 10000
                 type: string
                 x-go-name: Description
@@ -26,13 +26,13 @@ definitions:
                 type: integer
                 x-go-name: ID
             name:
-                description: the name for this product
+                description: the name for this poduct
                 maxLength: 255
                 type: string
                 x-go-name: Name
             price:
                 description: the price for the product
-                format: double
+                format: float
                 minimum: 0.01
                 type: number
                 x-go-name: Price
@@ -46,7 +46,7 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/notoriouscode97/go-microservices/product-api/cmd/api/data
+        x-go-package: github.com/notoriouscode97/go-microservices/product-api/sdk/models
     ValidationError:
         description: ValidationError ValidationError is a collection of validation error messages
         properties:
@@ -63,6 +63,19 @@ info:
     title: of Product API
     version: 1.0.0
 paths:
+    /orders:
+        post:
+            description: Create a new order
+            operationId: createOrder
+            responses:
+                "201":
+                    $ref: '#/responses/noContentResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
+                "500":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - orders
     /products:
         get:
             description: Return a list of products from the database
